--- a/index.html
+++ b/index.html
@@ -101,11 +101,9 @@
         <div class="min-w-full border border-red-100 my-10">
             <div id="showPets" class="grid grid-cols-1 lg:grid-cols-4 w-full gap-5 ">
 
-        <div class="grid lg:grid-cols-1 row-span-4 border border-green-800"></div>
-                
-            </div>
+                <div id="side-bar" class="grid lg:grid-cols-1 row-span-6 border border-green-800"></div>
 
-            
+            </div>
         </div>
 
     </main>
