--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h1 class="text-2xl font-bold font">Peddy</h1>
             </div>
             <div>
-                <ul class="flex gap-3 font">
+                <ul class="flex gap-3 font cursor-pointer">
                     <li><a>Home</a></li>
                     <li><a>Shop</a></li>
                     <li><a>Contact</a></li>
@@ -98,15 +98,77 @@
         </div>
 
         <!-- grid area -->
-        <div class="min-w-full border border-red-100 my-10">
-            <div id="showPets" class="grid grid-cols-1 lg:grid-cols-4 w-full gap-5 ">
-
-                <div id="side-bar" class="grid lg:grid-cols-1 row-span-6 border border-green-800"></div>
+        <div class="flex flex-col lg:flex-row justify-between w-full border border-e-slate-400 my-10 rounded-lg">
+            <div id="showPets"
+                class="grid grid-cols-1 lg:grid-cols-3 w-full border lg:w-[80%] border-e-slate-400  gap-5 py-3 px-3">
+            </div>
+            <div id="side-bar" class=" lg:w-[20%] w-full h-auto lg:my-3 lg:mx-3  border border-e-slate-400 rounded-lg">
 
             </div>
         </div>
 
+        <!-- modal section -->
+        <!-- Open the modal using ID.showModal() method -->
+        <button class="btn hidden" id="showModalDetails" onclick="customModal.showModal()">open modal</button>
+        <dialog id="customModal" class="modal modal-bottom sm:modal-middle">
+            <div class="modal-box">
+                <div id="modal-content">
+
+                </div>
+                <div class="modal-action">
+                    <form method="dialog">
+                        <!-- if there is a button in form, it will close the modal -->
+                        <button class="btn w-full">Cancel</button>
+                    </form>
+                </div>
+            </div>
+        </dialog>
     </main>
+
+    <footer class="mt-3 bg-black py-9 px-5">
+        <div class="text-white flex lg:flex-row justify-between">
+            <div class=" py-2 pl-5">
+                <div class="flex gap-2">
+                    <img src="./images/logo.webp" alt="">
+                    <h1 class="text-3xl font-bold font">Peddy</h1>
+                </div>
+
+                <div class="py-3 text-sm">
+                    <p>Loaction: av.Washington 165,NY CA 54003</p>
+                    <p>Phone: +313346732647</p>
+                    <p>Email: info@yourdomain.com</p>
+                    <p>Opening hours: 9.00 AM - 5.00 PM</p>
+                </div>
+
+                <div class="flex gap-2">
+                    <a href=""><img class="w-5 h-5" src="./images/fb.png" alt=""></a>
+                    <a href=""><img class="w-5 h-5" src="./images/youtube.png" alt=""></a>
+                    <a href=""><img class="w-5 h-5" src="./images/insta.png" alt=""></a>
+                </div>
+
+            </div>
+
+            <div>
+                <h2 class="text-xl font-bold font">Useful Links</h2>
+                <ul class="text-sm">
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Animals</li>
+                    <li>Foundation</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+
+            <div>
+                <h2 class="text-xl font-bold font py-2">Drop a Message</h2>
+                <input type="text" placeholder="Enter Your Email" class="px-3 py-4 border border-s-gray-500 rounded-lg bg-transparent my-3">
+                <br>
+                <button class="px-4 py-3 bg-teal-600 text-white font-bold rounded-lg">Subscribe</button>
+
+
+            </div>
+        </div>
+    </footer>
 
     <script src="./index.js"></script>
 </body>
