main condition done

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
             background-color: #a5cacb;
             border: solid 1px black;
         }
+
+        .active{
+            background-color: #0E7A81;
+            color: white;
+        }
     </style>
 </head>
 
