--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             border: solid 1px black;
         }
 
-        .active{
+        .active {
             background-color: #0E7A81;
             color: white;
         }
@@ -102,8 +102,14 @@
             <button class="btn-common font">Sort by</button>
         </div>
 
+
+
         <!-- grid area -->
         <div class="flex flex-col lg:flex-row justify-between w-full border border-e-slate-400 my-10 rounded-lg">
+            <!-- spinner -->
+            <div class="">
+                <span id="spinner" class=" hidden loading loading-bars loading-lg"></span>
+            </div>
             <div id="showPets"
                 class="grid grid-cols-1 lg:grid-cols-3 w-full border lg:w-[80%] border-e-slate-400  gap-5 py-3 px-3">
             </div>
@@ -112,7 +118,7 @@
             </div>
         </div>
 
-        <!-- modal section -->
+        <!-- modal section for details button-->
         <!-- Open the modal using ID.showModal() method -->
         <button class="btn hidden" id="showModalDetails" onclick="customModal.showModal()">open modal</button>
         <dialog id="customModal" class="modal modal-bottom sm:modal-middle">
@@ -128,6 +134,25 @@
                 </div>
             </div>
         </dialog>
+
+        <!-- modal section for Adopt button-->
+        <button class="btn hidden" id="showAdoptModal" onclick="adoptModal.showModal()">open modal</button>
+        <dialog id="adoptModal" class="modal modal-bottom sm:modal-middle">
+            <div class="modal-box">
+                <div id="modal-content">
+
+                </div>
+                <!-- <div class="modal-action">
+                    <form method="dialog">
+                        <button class="btn w-full">Cancel</button>
+                    </form>
+                </div> -->
+            </div>
+        </dialog>
+
+        
+
+
     </main>
 
     <footer class="mt-3 bg-black py-9 px-5">
@@ -166,7 +191,8 @@
 
             <div>
                 <h2 class="text-xl font-bold font py-2">Drop a Message</h2>
-                <input type="text" placeholder="Enter Your Email" class="px-3 py-4 border border-s-gray-500 rounded-lg bg-transparent my-3">
+                <input type="text" placeholder="Enter Your Email"
+                    class="px-3 py-4 border border-s-gray-500 rounded-lg bg-transparent my-3">
                 <br>
                 <button class="px-4 py-3 bg-teal-600 text-white font-bold rounded-lg">Subscribe</button>
 
